# Rupaya

./: README.md  docker-compose.yml
Rupaya-backend/: pom.xml
Rupaya-backend/src/main/resources/: application.properties  hibernate.cfg.xml
backend/: .env.example  .gitignore  BACKEND_SPEC_FOR_SPRING_BOOT.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  seed.py  start.py
backend/alembic/: env.py
backend/alembic/versions/: cbebb90bb7b7_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: models.py  session.py  supabase_client.py
backend/app/models/: auth.py  bills.py  groups.py  pagination.py  users.py
backend/app/routers/: auth.py  bills.py  groups.py  summary.py  users.py
backend/app/services/: auth_service.py  bill_service.py  group_service.py  summary_service.py  user_service.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20251102113018_init/: migration.sql
backend/prisma/migrations/20251102121502_added/: migration.sql
frontend/: Dockerfile  README.md
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/bills/: AddBillModal.tsx  BillCard.tsx  BillList.tsx
frontend/src/components/expenses/: AddExpenseModal.tsx
frontend/src/components/groups/: ExpenseList.tsx  GroupHeader.tsx  InviteMemberModal.tsx  MemberList.tsx
frontend/src/components/ui/: ErrorBox.tsx  (+3 more)
frontend/src/hooks/: useInfiniteScroll.ts
frontend/src/lib/: api.ts  http.ts
(+76 files in other folders)
