[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.15.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.0.1",
    "supabase>=2.23.0",
]
